# AcousticsLib

./: README.md  pyproject.toml
src/acousticslib/: __init__.py  email.py  error_handlers.py  exceptions.py  files.py  geography.py  password_reset.py  password_validation.py  time_utils.py
src/acousticslib/audio/: __init__.py  filters.py  io.py  metadata.py  spectrograms.py
src/acousticslib/database/: __init__.py  connection.py
src/acousticslib/database/repositories/: __init__.py  docs.py  kit.py  kit_maintenance.py  metadata.py  observation.py  people.py  recorder.py  reference.py  results.py  service_notes.py  soundclass.py  users.py  weather.py
src/acousticslib/processing/: __init__.py  correlation.py  doa.py  fft.py  hardware.py
tests/: test_audio_metadata.py  test_error_handlers.py  test_exceptions.py  test_password_validation.py  test_time_utils.py
