[project]
name = "acousticslib"
version = "0.1.7"
description = "Shared library for acoustic data management"
readme = "README.md"
authors = [
    { name = "jejl", email = "jejlovell@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "astropy>=6.0.0",
    "bcrypt>=4.3.0",
    "geopandas>=1.1.0",
    "guano>=1.0.15",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.0.0",
    "pymysql>=1.1.1",
    "scipy>=1.15.0",
    "shapely>=2.0.0",
    "soundfile>=0.13.0",
    "sqlalchemy>=2.0.0",
    "wavinfo>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
